--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<meta charset="UTF-8">
 	<title>Javascript Calculator</title>
 	<meta name="viewport" content="width=device-width,initial-scale=1">
-	<link rel="stylesheet" href="/css/styles.css">
+	<link rel="stylesheet" href="/css/style.css">
 	<script type="text/javascript" src="/scripts/script.js"></script>
 	<body>
 	
