--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 	</head>
 	<body>
 		<div class="container">
+			<div class="empty"></div>
+			
 			<div class="calculator">
 				<div class="display">
 					<span id="current-calc"></span>
@@ -45,7 +47,12 @@
 					<span data-key="Enter" id="equ">&equals;</span>
 				</div>
 			</div>
-			<div class="histo-calcul"></div>
+			<div>
+    				<div class="histo-calcul"></div>
+    				<div class="toolsbar">
+      					<button id="theme-switch">🌞</button>
+    				</div>
+  			</div>
 		</div>
 		
 		<script type="text/javascript" src="scripts/script.js"></script>
