add github and codepen redirect link

--- a/index.html
+++ b/index.html
@@ -48,8 +48,13 @@
 				</div>
 			</div>
 			<div>
-    				<div class="histo-calcul"></div>
     				<div class="toolsbar">
+      					<button id="link" onclick="window.open('https://github.com/VydrOz/Javascript-Calculator', '_blank');">
+						<i class="fab fa-github fa-lg" aria-hidden="true"></i>
+				      	</button>
+				      	<button id="link" onclick="window.open('https://codepen.io/vydroz/pen/jOGywpO', '_blank');">
+						<i class="fab fa-codepen fa-lg"></i>
+				      	</button>
       					<button id="theme-switch">🌞</button>
     				</div>
   			</div>
