🐞 fix missing icons source

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
   			</div>
 		</div>
 		
+		<script src="https://kit.fontawesome.com/f28b055962.js" crossorigin="anonymous"></script>
 		<script type="text/javascript" src="scripts/script.js"></script>
 	</body>
 </html>
