🐞 fix histo-calcul has been deleted involuntarily

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 				</div>
 			</div>
 			<div>
+				<div class="histo-calcul"></div>
     				<div class="toolsbar">
       					<button id="link" onclick="window.open('https://github.com/VydrOz/Javascript-Calculator', '_blank');">
 						<i class="fab fa-github fa-lg" aria-hidden="true"></i>
